--- a/src/components/Rightside/maincontent.css
+++ b/src/components/Rightside/maincontent.css
@@ -150,22 +150,7 @@ cursor: pointer;
 
 display: flex;
 }
-.mobile_navitem_flexbox .arrow{
-height: 0;
-width: 0;
-border: solid black;
-border-top-width: medium;
-border-right-width: medium;
-border-bottom-width: medium;
-border-left-width: medium;
-border-width: 0 3px 3px 0;
-display: inline-block;
-padding: 3px;
-transform: rotate(135deg);
-top: 9px;
-margin-left: auto;
-position: relative;
-}
+
 
 .section_end_hr{
 
@@ -290,16 +275,10 @@ margin-top: 40px;
 }
 
 .rightside .img_otherthanhome{
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  margin-top: 4px;
-  z-index: -1;
-  width: 90px;
-  
+width: 100px;
 }
 .rightside .h1_otherthanhome{
-  margin-top: 160px;
+  margin-top: 10px;
 }
 .fa-close:hover{
 
@@ -537,6 +516,10 @@ z-index: 10;
 
 
 @media only screen and (max-width:800px) {
+  .rightside .img_otherthanhome {
+    width: 100px;
+
+  }
   form {
 
     width: auto;
