--- a/src/components/Rightside/maincontent.css
+++ b/src/components/Rightside/maincontent.css
@@ -266,7 +266,7 @@ display: none;
 }
 }
 .rightside{
-  background-color: #000;
+  background-color: #2b2b2b;
   width: 100%;
 padding-bottom: 40px;
 position: relative;
