--- a/src/components/Rightside/navbar.css
+++ b/src/components/Rightside/navbar.css
@@ -81,8 +81,32 @@
 .navitemsholder .item{
     margin: auto;
     color: black;
+    display: inline;
 
 
+}
+.navitemsholder .item_a_conatiner{
+ 
+  display: inline;
+position: relative;
+
+}
+.navitemsholder .item_a_conatiner:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: -4px;
+  left: 0;
+  background-color: black;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.navitemsholder .item_a_conatiner:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
 }
 .navitemsholder .item a{
  
