--- a/src/components/aboutus/Aboutus.css
+++ b/src/components/aboutus/Aboutus.css
@@ -26,7 +26,7 @@ border-radius: 30px;
 .rightaboutus{
     border: 1px solid #464646;
     padding: 1rem;
-    background: red;
+    background: #131313;
     border-radius: 30px;
     margin-left: 15px;
     width: 20%;
@@ -38,8 +38,8 @@ border-radius: 30px;
     height: auto;
     border-radius: 30px;
     border: 0;
-    background-color: blanchedalmond;
-    color: black;
+    background-color: #f43848;
+    color: white;
     padding: 1rem;
     display: flex;
     margin-top: 30px;
