--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -10,6 +10,8 @@ font-size: 16px;
   
   .row {
     padding: 1em 1em;
+    color: white;
+background: black;
   }
   .row.primary {
     display: grid;
