--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -6,7 +6,8 @@ footer {
   background-color: #0f0f0f;
 color: #a7a7a7;
 font-size: 16px;
-}
+
+margin-top: 60px;}
   
   .row {
     padding: 1em 1em;
