--- a/src/components/Rightside/maincontent.css
+++ b/src/components/Rightside/maincontent.css
@@ -333,7 +333,7 @@ margin-top: 40px;
   position: fixed;
   bottom: 10px;
   right: 0;
-z-index: 3;
+z-index: 2;
 
 }
 .shcedulemeeting{
@@ -437,17 +437,19 @@ form{
   padding-top: 70px;
 }
 .getoffercontainer button{
-  padding: 1rem;
-  width: 217px;
-  border-radius: 6px;
-  margin-top: 30px;
   background-color: #000000c9;
-  height: 52.5px;
-  font-size: 16px;
-  display: block;
   border: 1px solid #8f8f8f;
-  color: white;
+  border-radius: 6px;
+  color: #fff;
+  display: block;
+  font-size: 16px;
+  height: 52.5px;
+  margin-top: 30px;
+  padding: 1rem;
   text-align: center;
+
+  margin-left: 10px;
+  margin-right: 10px;
 }
 button:hover{
   background-color: white;
